--- a/jenkins_role/templates/jenkins.j2
+++ b/jenkins_role/templates/jenkins.j2
@@ -6,7 +6,7 @@ JENKINS_USER="jenkins"
 
 JENKINS_JAVA_OPTIONS="-Djava.awt.headless=true"
 
-JENKINS_PORT="8080"
+JENKINS_PORT="{{ jenkins_port }}"
 
 JENKINS_LISTEN_ADDRESS=""
 
